# generative-ai-solutions

./: .env.example  .gitignore  LICENSE  README.md  function_calling_with_chat.ipynb  generate_readme_doc.ipynb  image_analysis.ipynb  masking.ipynb  mystey_murder.ipynb  pdf_reader.ipynb  requirements.txt  simple_prompt.ipynb  video_analysis.ipynb
cover-letter-generator/: README.md  app.py  cl-generator.ipynb  test.ipynb
creative_analysis/: .env.example  .gitignore  README.md  demo_crea_checker_gemini.ipynb  demo_crea_checker_gemini.md  prompt_refinement.ipynb  requirements.txt  video_analysis.ipynb
inputs/: generate_readme_doc.html
murder_in_the_alps_express/: Antoine_Lefevre.md  Bastien_Lemaire.md  Gabriel_Marchand.md  evidence_report.md
murder_mistery/murder_in_the_alps_express/: Cyril_Moreau.md  Maxime_Dubois.md  Quentin_Dubois.md  Robin_Clement.md
ollama/: README.md  app.py  pyproject.toml  test.py  test_ollama_sdk.ipynb
ollama/src/: chatbot.py  config.py  data_ingestor.py  file_loader.py
output_pdfs/: demo_crea_checker_gemini.md
