[tool.poetry]  
name = "ollama-rag"  
version = "0.1.0"  
description = "Talk with private files using LLM"  
authors = ["chappis.bastien@gmail.com"]  

[tool.poetry.dependencies]  
python = "==3.12.9"  
ollama = "^0.4.7"  
flashrank = "^0.2.10"  
langchain = "^0.3.17"  
langchain-community = "^0.3.16"  
langchain-ollama = "^0.2.3"  
langgraph = "^0.2.68"  
pypdfium2 = "^4.30.1"  
rank-bm25 = "^0.2.2"  
streamlit = "^1.41.1"  
fastembed = "^0.5.1"
langchain-chroma = "^0.2.1" 

[tool.poetry.dev-dependencies]  
loguru = "^0.7.3"  
pre-commit = "^4.0.1"  
pytest = "^8.3.4"  
ruff = "^0.9.5"  
watchdog = "^6.0.0"  